# Richard-X46.github.io

./: .gitignore  Readme.md  _config.yml  assignment2.html  assignment3.html  assignment4.html  canadian-dollar-story.html  ideation-activity.html  index.html  index.md  ls_index.html  persona-arjun.html  pyproject.toml
Assignment_2/: redesign assignment2.ipynb
VisualExplorers/: Data Viz Project - Visual Explorers - Data Story EDA.ipynb  Persona.pptx  Presentation - Visual Explorers.pptx  Project Proposal.docx  Story.docx  ai_story_app.py  ai_story_app_advanced.py  ai_story_app_interactive.py  ai_story_app_refined.py  ai_story_final_visual_explorers.py  app_streamlit_part1.py  avg_hourly_wages_by_industry_upload.csv
VisualExplorers/.streamlit/: config.toml
VisualExplorers/Datasets/: 2024 Income Scenarios - with Canada Mortgage and Housing Corporation Average Market Rent.xlsx  2024 Income Scenarios - with Rent Geared to Income and other subsidies.xlsx  2024 Income Scenarios - with Toronto Regional Real Estate Board Market Rent.xlsx  AI_Exposure_data.csv  AVG_salaries_based_on_prof.csv  PG_students_enrollment.csv
VisualExplorers/Datasets/PG Enrollment by Province/: Alberta.csv  British Columbia.csv  Manitoba.csv  New Brunswick.csv  Newfoundland.csv  Nova Scotia.csv  Ontario.csv  Quebec.csv  Saskatchewan.csv
assignment2/: assignment2.html  redesign assignment2.ipynb
assignment2/data/: nightingale.csv  nightingale.xlsx
pages/: assignment2.html  assignment3.html  assignment4.html  canadian-dollar-story.html  ideation-activity.html  persona-arjun.html
